--- a/serverless.yml
+++ b/serverless.yml
@@ -134,3 +134,18 @@ functions:
               querystrings:
                 start: true
                 end: true
+
+  ASAPInspector:
+    handler: com.serverless.ASAPInspectorHandler
+    timeout: 30
+    events:
+      - http:
+          path: /sample-data-2/asap-inspector
+          method: get
+          cors: true
+          request:
+            parameters:
+              querystrings:
+                start: true
+                end: true
+                orgCode: true
